# TT-Damage-Calculator

./: .gitignore  .kateproject  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Toontown Damage Calculator.spec  main.py  main.pyw  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: coghp.html
mod/: calculators.py  gags.py  keybinds.py  settings.toml  tt_calc.pyd  tt_gags.pyd  tt_settings.pyd  update_checker.py  version.txt
mod/tt_calc/: Cargo.toml
mod/tt_calc/src/: lib.rs
mod/tt_gags/: Cargo.toml
mod/tt_gags/src/: lib.rs
mod/tt_settings/: Cargo.toml
mod/tt_settings/src/: lib.rs
src/: calc.rs  gags.rs  lib.rs  settings.rs
src/tt_damage_calculator/: Toontown Damage Calculator.py  __init__.py  __main__.py  app.py  update_checker.py  widgets.py
src/tt_damage_calculator/assets/: settings.toml
