[package]
name = "tt_settings"
authors = ["Vhou-Atroph"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tt_settings"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }